hard-gists/1147973/run.log
=== Docker Run Log for 1147973 ===
Started at: Mi 29. Okt 11:56:37 CET 2025

[2025-10-29 11:56:38] START: Running container for 1147973
[2025-10-29 11:56:38] SUCCESS: Container 37bf5c8448966445898f2ef33ad3d9379a13f412fd07766e65bb4e613ca786c8 started for 1147973
=== Container logs for 1147973 ===
  File "/snippet.py", line 17
    def gotResolverResponse(self, (ans, auth, add), protocol, message, address):
                                  ^^^^^^^^^^^^^^^^
SyntaxError: Function parameters cannot be parenthesized
=== End of logs for 1147973 ===
[2025-10-29 11:56:40] INFO: Container 37bf5c8448966445898f2ef33ad3d9379a13f412fd07766e65bb4e613ca786c8 has stopped
